Day 7; Cleanup tests for other days.

--- a/Day1/Day1.fsproj
+++ b/Day1/Day1.fsproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Program.fsx" />
+    <None Include="Test.fsx" />
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
