--- a/Day2/Day2.fsproj
+++ b/Day2/Day2.fsproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <None Include="Program.fsx" />
     <None Include="App.config" />
+    <None Include="Test.fsx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Library\Library.fsproj">
