--- a/Day16/Day16.fsproj
+++ b/Day16/Day16.fsproj
@@ -48,7 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Program.fs" />
+    <None Include="Program.fsx" />
     <None Include="App.config" />
   </ItemGroup>
   <PropertyGroup>
